@@ -239,59 +239,18 @@
     };
 </script>
 
-{#    <div style="float: left;">#}
-{#        <div style="float: left;">#}
-{#            <div style="float: left;">#}
-{#                {% if has_permission('Create_Task') %}#}
-{#                    <button id='{{ entity.entity_type }}_{{ entity.id }}_list_tasks_create_task_button'>Create Task</button>#}
-{#                {% endif %}#}
-{#                <button id='{{ entity.entity_type }}_{{ entity.id }}_list_tasks_gantt_reload_button'>Reload</button>#}
-{#            </div>#}
-{#            <div style="width: 100px; float: left"></div>#}
-{#            {% if has_permission('Update_Task') %}#}
-{#                <div style='float: left;'>#}
-{#                    <button id="{{ entity.entity_type }}_{{ entity.id }}_list_tasks_schedule_tasks_button">Schedule Tasks#}
-{#                    </button>#}
-{#                </div>#}
-{#            {% endif %}#}
-{#            <div style='float: left;'> {# gantt boundries #}
-{#                <div style="float: left">#}
-{#                    <div style='float: left;'>Start :</div>#}
-{#                    <div id='{{ entity.entity_type }}_{{ entity.id }}_gantt_start_date' style='float: left;'></div>#}
-{#                </div>#}
-{#                <div style="float: left">#}
-{#                    <div style='float: left;'>End</div>#}
-{#                    <div id='{{ entity.entity_type }}_{{ entity.id }}_gantt_end_date' style='float: left;'></div>#}
-{#                </div>#}
-{#                <div style="float: left">#}
-{#                    <div style='float: left;'>Grid Mode</div>#}
-{#                    <div id='{{ entity.entity_type }}_{{ entity.id }}_grid_mode' style='float: left;'></div>#}
-{#                </div>#}
-{#                <div style="float: left">#}
-{#                    <div style='float: left;'>Gantt Mode</div>#}
-{#                    <div id='{{ entity.entity_type }}_{{ entity.id }}_gantt_mode' style='float: left;'></div>#}
-{#                </div>#}
-{#                <div style="float: left;">#}
-{#                    <button id='{{ entity.entity_type }}_{{ entity.id }}_list_tasks_refresh_button'>Refresh</button>#}
-{#                    <button id='{{ entity.entity_type }}_{{ entity.id }}_list_tasks_go_to_today_button'>Go To Today</button>#}
-{#                </div>#}
-{#            </div>#}
-{#        </div>#}
-{#    </div>#}
-
 <div class="row-fluid">
     <div class="span12">
         <!--PAGE CONTENT BEGINS-->
 
         <div class="left">
 
-
             <div class="btn-toolbar">
 
                 {% if has_permission('Create_Task') %}
                     <div class="btn-group">
                         <button data-toggle="dropdown"
-                                class="btn btn-small btn-success dropdown-toggle">
+                                class="btn btn-small btn-danger dropdown-toggle">
                             <i class="icon-edit bigger-120"></i>
                             Create
                             <span class="caret"></span>
@@ -322,13 +281,13 @@
 
                 <div id="gantt_reload_button" class="btn-group">
                     <button class="btn btn-small btn-success">
-                        <span class="icon-refresh bigger-120"></span>
+                        <span class="icon-retweet bigger-120"></span>
                         Reload
                     </button>
                 </div>
 
                 <div id="gantt_refresh_button" class="btn-group">
-                    <button class="btn btn-small btn-success">
+                    <button class="btn btn-small btn-info">
                         <span class="icon-refresh bigger-120"></span>
                         Refresh
                     </button>
@@ -340,10 +299,10 @@
                             <span class="icon-cogs bigger-120"></span>
                             Schedule Tasks
                         </button>
-                    </div>
-                    <div id="schedule-dialog-message" class="hide">
-                        <div class="progress progress-warning progress-small progress-striped active">
-                            <div class="bar" style="width: 100%;"></div>
+                        <div id="schedule-dialog-message" class="hide">
+                            <div class="progress progress-warning progress-small progress-striped active">
+                                <div class="bar" style="width: 100%;"></div>
+                            </div>
                         </div>
                     </div>
                 {% endif %}
@@ -353,18 +312,102 @@
                         <i class="icon-calendar bigger-120"></i>
                         Go To Today
                     </button>
+                    <div id="gantt_scroll_to_button" class="hidden" start="0"></div>
                 </div>
             
-                <div id="gantt_scroll_to_button" class="hidden"></div>
+                <div class="btn-group">
+                    <a href="#"
+                       data-toggle="dropdown"
+                       class="btn btn-small btn-warning dropdown-toggle">Toggle Columns<span class="caret"></span>
+                    </a>
+                    <ul class="dropdown-menu">
+                        <li>
+                            <input class="ace" type="checkbox" name="columns[]" id="action_column_toggler" checked=true/>
+                            <label class="lbl" for="action_column_toggler">Action</label>
+                        </li>
 
+                        <li>
+                            <input class="ace" type="checkbox" name="columns[]" id="id_column_toggler" checked=true/>
+                            <label class="lbl" for="id_column_toggler">Id</label>
+                        </li>
+
+                        <li>
+                            <input class="ace" type="checkbox" name="columns[]" id="name_column_toggler" checked=true/>
+                            <label class="lbl" for="name_column_toggler">Name</label>
+                        </li>
+
+                        <li>
+                            <input class="ace" type="checkbox" name="columns[]" id="complete_column_toggler" checked=true/>
+                            <label class="lbl" for="complete_column_toggler">% Complete</label>
+                        </li>
+
+                        <li>
+                            <input class="ace" type="checkbox" name="columns[]" id="resource_column_toggler" checked=true/>
+                            <label class="lbl" for="resource_column_toggler">Resource</label>
+                        </li>
+
+                        <li>
+                            <input class="ace" type="checkbox" name="columns[]" id="timing_column_toggler" checked=true/>
+                            <label class="lbl" for="timing_column_toggler">Timing</label>
+                        </li>
+
+                        <li>
+                            <input class="ace" type="checkbox" name="columns[]" id="start_column_toggler" checked=true/>
+                            <label class="lbl" for="start_column_toggler">Start</label>
+                        </li>
+
+                        <li>
+                            <input class="ace" type="checkbox" name="columns[]" id="end_column_toggler" checked=true/>
+                            <label class="lbl" for="end_column_toggler">End</label>
+                        </li>
+
+                        <li>
+                            <input class="ace" type="checkbox" name="columns[]" id="chart_column_toggler" checked=true/>
+                            <label class="lbl" for="chart_column_toggler">Chart</label>
+                        </li>
+                    </ul>
+                </div>
+
+{#                <div id="task_info_widget" class="widget-box">#}
+{#                    <div class="widget-header">#}
+{#                        <h5>Task Info</h5>#}
+{#                        <div class="widget-toolbar">#}
+{#                            <a href="#" data-action="reload">#}
+{#                                <i class="icon-refresh"></i>#}
+{#                            </a>#}
+{##}
+{#                            <a href="#" data-action="collapse">#}
+{#                                <i class="icon-chevron-up"></i>#}
+{#                            </a>#}
+{##}
+{#                            <a href="#" data-action="close">#}
+{#                                <i class="icon-remove"></i>#}
+{#                            </a>#}
+{#                        </div>#}
+{##}
+{#                        <div class="widget-body">#}
+{#                            <div class="widget-main">#}
+{#                                <table class="table table-striped table-bordered table-hover">#}
+{#                                    <tbody>#}
+{#                                        <tr>#}
+{#                                            <td class="">Alex</td>#}
+{#                                            <td><a href="#">alex@email.com</a></td>#}
+{#                                            <td class="hidden-480"><span class="label label-warning">Pending</span></td>#}
+{#                                        </tr>#}
+{#                                    </tbody>#}
+{#                                </table>#}
+{#                            </div>#}
+{#                        </div>#}
+{##}
+{#                    </div>#}
+{#                </div>#}
             </div>
-            {#        <a id='test' href='#' data-toggle='tooltip' title#}
-            {#           data-original-title='test'>Test</a>#}
 
-            <div>
+
+            <div class="row-fluid">
                 <div id="{{ entity.entity_type }}_{{ entity.id }}_gantt"
                      class='gantt'
-                     style='height: 800px'></div>
+                     style='height: 700px'></div>
             </div>
         </div>
         <!--PAGE CONTENT ENDS-->
@@ -858,7 +901,6 @@ require([
         leaf_taskrow_menu.startup();
         parent_taskbar_menu.startup();
         parent_taskrow_menu.startup();
-
     };
 
 
@@ -886,6 +928,13 @@ require([
     });
     var tasks_cache_store = new Cache(tasks_jsonRest_store, tasks_memory_store);
 
+    // allow the gantt to resize with the window
+    $(window).on('resize', function(){
+        var gantt_height = $(window).height() - 230;
+        $('#{{ entity.entity_type }}_{{ entity.id }}_gantt').css({height: gantt_height});
+    });
+    $(window).trigger('resize');
+
     var gantt_chart = new GanttGrid({
         id: '{{ entity.entity_type }}_{{ entity.id }}_gantt_dgrid',
         width: '100%',
@@ -898,17 +947,56 @@ require([
         loadingMessage: "<div style='float: left' class='dijitIconLoading'>&nbsp</div><div>Loading</div>",
         noDataMessage: "",
         pageSkip: 0,
-        cellNavigation: false
+        cellNavigation: false,
+        onExpand: function(){
+            console.debug('expanding tree');
+        }
     }, '{{ entity.entity_type }}_{{ entity.id }}_gantt');
     gantt_chart.startup();
 
     // ceter on today
     setTimeout(
         function () {
-            gantt_column.centerOnToday()
+            gantt_column.centerOnToday();
         },
         0
     );
+
+    // column togglers
+    // TODO: implement it to the GanttGrid
+    $('#action_column_toggler').on('click', function(e){
+        $(".dgrid-column-action").toggle();
+    });
+    $('#id_column_toggler').on('click', function(e){
+        $(".dgrid-column-id").toggle();
+    });
+    $('#name_column_toggler').on('click', function(e){
+        $(".dgrid-column-name").toggle();
+    });
+    $('#complete_column_toggler').on('click', function(e){
+        $(".dgrid-column-complete").toggle();
+    });
+    $('#resource_column_toggler').on('click', function(e){
+        $(".dgrid-column-resource").toggle();
+    });
+    $('#timing_column_toggler').on('click', function(e){
+        $(".dgrid-column-timing").toggle();
+    });
+    $('#start_column_toggler').on('click', function(e){
+        $(".dgrid-column-start").toggle();
+    });
+    $('#end_column_toggler').on('click', function(e){
+        $(".dgrid-column-end").toggle();
+    });
+    $('#chart_column_toggler').on('click', function(e){
+        $(".dgrid-column-set-1").toggle();
+        $(".dgrid-column-set-scroller.dgrid-scrollbar-height.dgrid-column-set-scroller-1").toggle();
+    });
+
+    // register cell selection function
+{#    gantt_chart.on('dgrid-select', function(e){#}
+{#        console.debug('gantt_chart.selection  : ', gantt_chart.selection);#}
+{#    });#}
 
     // create context menus and tooltip dialogs
     create_contextMenus();
@@ -941,9 +1029,12 @@ require([
         event.stopPropagation();
     });
 
+    // scroll to button
     $("#gantt_scroll_to_button").on('click', function(e){
         var start = $(this).attr('start');
         gantt_column.scrollToDate(start);
+        e.preventDefault();
+        e.stopPropagation();
     });
 
     // Schedule
@@ -954,55 +1045,23 @@ require([
                 title: "Scheduling Tasks...",
                 title_html: true,
                 height: 70,
-                width: 350,
+                width: 350
             });
 
             $.post(
                 '{{ request.route_url("auto_schedule_tasks") }}'
             ).done(function(){
-                alert('scheduling tasks has finished successfully!');
-            }).fail(function(){
-                alert('scheduling tasks has failed!');
+                bootbox.alert('Scheduling tasks has finished successfully!');
+            }).fail(function(jqXHR){
+                bootbox.alert(jqXHR.responseText);
             }).always(function(){
-                dialog.close();
+                dialog.dialog("close");
                 gantt_column.refresh();
             })
 
             
             
         });
-    {#                var schedule_tasks_button = new Button({#}
-    {#                    label: 'Schedule Tasks',#}
-    {#                    onClick: function () {#}
-    {#    #}
-    {#                        var do_schedule = function () {#}
-    {#                            // xhr.post returns a `promise` use it if needed#}
-    {#                            // show the busy dialog#}
-    {#                            var busy_dialog = dialogs.busy_dialog({#}
-    {#                                id: '{{ entity.entity_type }}_{{ entity.id }}_schedule_tasks_busy_dialog'#}
-    {#                            });#}
-    {#                            busy_dialog.show();#}
-    {#                            return xhr.post(#}
-    {#                                    '{{ request.route_url('auto_schedule_tasks') }}',#}
-    {#                                    {#}
-    {#                                        method: 'POST'#}
-    {#                                    }#}
-    {#                            );#}
-    {#                        };#}
-    {#    #}
-    {#                        var do_load = function () {#}
-    {#                            // reload scheduled tasks#}
-    {#                            gantt_column.refresh();#}
-    {#                            // kill the busy dialog#}
-    {#                            var busy_dialog = dijit.byId('schedule_tasks_busy_dialog');#}
-    {#                            busy_dialog.destroyRecursive();#}
-    {#                        };#}
-    {#    #}
-    {#                        when(do_schedule(), do_load);#}
-    {#    #}
-    {#                    }#}
-    {#                }, '{{ entity.entity_type }}_{{ entity.id }}_list_tasks_schedule_tasks_button');#}
-    {#                schedule_tasks_button.startup();#}
     {% endif %}
 
 
