@@ -8,6 +8,8 @@ Stalker Pyramid Changes
 * **Update:** Updating both the code and the style to Twitter Bootstrap.
 * **Update:** Main Navigation Bar is updated both the code and the style to
   Twitter Bootstrap.
+* **Update:** TaskJuggler error messages are now correctly displayed in the UI.
+* **Update:** Updated the GanttChart theme to ACE.
 
 0.1.0.b3
 ========
